--- a/ops-dashboard/src/app/status/status.component.html
+++ b/ops-dashboard/src/app/status/status.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div style="margin-top: 30px">
+  <div style="margin-top: 30px" *ngIf="level > 0">
     <h2>More Details</h2>
     <div style="margin-left: 20px">
       System administrators can find more information at the <a routerLink="/dashboard">ops dashboard</a>
